# HarborCap_Bullpen

./: .env.example  .gitignore  .mcp.json  BULLPEN.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  run_agent.py  scheduler.py
agents/: biz_registration.py  building_permits.py  census_demographics.py  census_migration.py  corporate_relocations.py  environmental_risk.py  ercot_load.py  flood_risk.py  freight_volume.py  hud_vacancy.py  irs_migration.py  job_demand.py  materials_price.py  sales_tax_revenue.py  toll_traffic.py  txdot_infra.py  zoning_changes.py
dashboard/: .env.local.example  package-lock.json  package.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/agents/: page.tsx
dashboard/app/feed/: page.tsx
dashboard/app/map/: page.tsx
dashboard/app/submarkets/: page.tsx
dashboard/app/submarkets/[slug]/: page.tsx
dashboard/components/: AgentStatusCard.tsx  Navbar.tsx  SeverityPill.tsx  SignalCard.tsx  SignalGroup.tsx  StatTile.tsx  SubmarketCard.tsx
dashboard/lib/: theme.ts  types.ts
scripts/: seed_data.py  test_all_agents.py
shared/: config.py  db.py  geocode.py  signals.py  snapshot.py
sql/: 001_create_tables.sql  002_create_views.sql  004_snapshots.sql
